# sorftime-mcp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml
docs/: architecture.md  deployment.md  mcp-skill-integration.md
skills/sorftime-research/: SKILL.md
skills/sorftime-research/agents/: openai.yaml
skills/sorftime-research/evals/: evals.json
skills/sorftime-research/references/: interpretation-boundaries.md  mcp-contract.md  workflows.md
src/: cli.ts  client.ts  config.ts  domains.ts  endpoints.ts  errors.ts  input.ts  output.ts  runner.ts  types.ts
src/core/: governance.ts  service.ts
src/mcp/: audit.ts  auth.ts  config.ts  context.ts  executor.ts  http-server.ts  http.ts  rate-limit.ts  results.ts  server.ts  stdio.ts
src/sorftime_mcp/: __init__.py  __main__.py  audit.py  auth.py  catalog.py  cli.py  client.py  config.py  domains.py  executor.py  models.py  server.py
test/: cli.e2e.test.ts  client.test.ts  config.test.ts  domains.test.ts  endpoints.test.ts  input.test.ts  mcp-config.test.ts  mcp-contract.test.ts  mcp-governance.test.ts  mcp-http.test.ts  output.test.ts  rate-limit.test.ts  skill-contract.test.ts
tests/: conftest.py  test_client.py  test_client_and_auth.py  test_models_and_costs.py  test_server_tools.py
