[project]
name = "sorftime-mcp"
version = "0.1.0"
description = "Remote MCP server for read-only Sorftime Enterprise API access."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "fastmcp==3.4.2",
    "httpx>=0.27.2",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "pyjwt>=2.10.1",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
sorftime-mcp = "sorftime_mcp.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
